src/ui/list/snapshots/work_tui__ui__list__tests__epic_with_mixed_children.snap
---
source: src/ui/list/mod.rs
expression: "format_display_rows(&list.display_rows, &issues, &story_children)"
---
── BOARD (2) ──
▸ EPIC-1 Cross-team initiative [board]
  • TASK-1 Implement API endpoint [In Progress]
  • TASK-2 Add monitoring [In Progress]
── BACKLOG (2) ──
▸ EPIC-1 Cross-team initiative [backlog]
  • TASK-3 Plan rollout [Proposed]
  • TASK-4 Write docs [Proposed]
