src/ui/list/snapshots/work_tui__ui__list__tests__search_by_story_title_surfaces_children.snap
---
source: src/ui/list/mod.rs
expression: "format_display_rows(&list.display_rows, &issues, &story_children)"
---
── BOARD (2) ──
▸ STORY-1 Auth migration [board]
  • TASK-1 Update config [In Progress]
  • TASK-2 Write tests [In Progress]
